# mlperceptron

./: CMakeLists.txt  README.md
Sources/: mlperceptron.c
mlperceptron-pd/: mlperceptron-help.pd  mlperceptron-teste.pd
mlperceptron-pd/data/: iris-dataset_original.txt  ricochetTrill_test.txt  ricochetTrill_train.txt  ricochet_analysis2.txt  ricochet_analysis3.txt  ricochet_analysisMFCC.txt  ricochet_label.txt  ricochet_onset.txt  ricochet_onset_analysis.txt  ricochet_onset_analysis2.txt  ricochet_trill_6_feat.txt  ricochet_trill_data.txt  ricochet_trill_input.txt  ricochet_trill_test.txt  ricochet_trill_test_6feat.txt  ricochet_trill_train.txt  ricochet_trill_train_6feat.txt  test_data.txt  train_data.txt  trill_analysis2.txt  trill_analysis3.txt  trill_analysisMFCC.txt  trill_label.txt  trill_onset.txt  trill_onset_analysis.txt  trill_onset_analysis2.txt
mlperceptron-pd/data/modelos/: modelo_iris.txt  ricochet_trill_80.txt  ricochet_trill_model.txt  ricochet_trill_modelo.txt  ricochet_trill_modelo2.txt  ricochet_trill_modelo3.txt  ricochet_trill_modelo4.txt  ricochet_trill_modelo5.txt  ricochet_trill_modelo6.txt
